# modland

./: .gitignore  README.md  Sinusoidal Tile Grid.ipynb  makefile  pyproject.toml
.github/workflows/: ci.yml
MODLAND/: MODLAND_affine.py  __init__.py  dimensions.py  get_proj4.py  transform_shape.py
modis_land_tiles/: constants.py  latlon_to_sinusoidal.py  outlines.py  parsehv.py  projection.py  sinusoidal_to_MODLAND.py
modland/: MODIS_land_tile.py  MODLAND.py  __init__.py  dimensions.py  find_MODLAND_tiles.py  find_mod_tiles.py  find_modland_tiles.py  indices.py  latlon_to_MODLAND.py  latlon_to_mod.py  latlon_to_modland.py  mod_pixels.py  modland.py  modland_affine.py  modland_pixels.py  sinusoidal_to_MODLAND.py  sinusoidal_to_latlon.py  transform_shape.py
tests/: test_modland_import.py
