[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]

[project]
name = "modland"
version = "1.1.2"
description = "georeferencing for MODIS/VIIRS sinusoidal tiles"
readme = "README.md"
authors = [
    { name = "Gregory H. Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "affine",
    "geopandas",
    "numpy",
    "pyproj",
    "rasterio",
    "rasters",
    "scipy",
    "shapely"
]

requires-python = ">=3.10"

[tool.setuptools.package-data]
modland = ["*.txt"]

[project.urls]
"Homepage" = "https://github.com/JPL-Evapotranspiration-Algorithms/modland"

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "twine"
]